# MyCache

./: .gitignore  .python-version  README.md  banchmark_ser.py  my_cache.py  my_cache_async.py  pyproject.toml  setup.py
examples/: banchmark_ser.py  simple_use_cache.py  use_async_cache.py  use_async_cache_crash_test.py
my_cache/: CacheStor.py  __init__.py  _my_cache_async.py
my_cache/serialise/: Serialise.py  __init.py
tests/: test.py  test2.py  test2_next.py  test3.py  test4.py  test5.py
